--- a/index.html
+++ b/index.html
@@ -17,31 +17,27 @@
         body {
             font-family: 'Open Sans', sans-serif;
             color: #C5C6C7;
-            overflow-x: hidden;
+            overflow: hidden;
             background: #0B0C10;
             transition: background 0.5s ease;
         }
 
-        html {
-            scroll-behavior: smooth;
-        }
-
         section {
-            min-height: 100vh;
-            position: relative;
-            padding: 80px 40px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            overflow: hidden;
-            transition: opacity 0.5s ease, transform 0.5s ease;
+            display: none;
+            position: fixed;
+            top: 80px;
+            left: 0;
+            width: 100%;
+            height: calc(100vh - 80px);
+            overflow-y: auto;
+            padding: 40px;
+            opacity: 0;
+            transition: opacity 0.5s ease;
         }
 
-        section.hidden {
-            opacity: 0;
-            transform: translateY(50px);
-            pointer-events: none;
+        section.active {
+            display: block;
+            opacity: 1;
         }
 
         nav {
@@ -151,6 +147,8 @@
             background: linear-gradient(135deg, #1F2833, #0B0C10);
             text-align: center;
             position: relative;
+            top: 0;
+            height: 100vh;
         }
 
         #home canvas {
@@ -165,6 +163,9 @@
 
         #home .content {
             z-index: 1;
+            position: relative;
+            top: 40%;
+            transform: translateY(-50%);
         }
 
         #home h1 {
@@ -875,7 +876,7 @@
     <nav>
         <div id="logo">Pranjal Shrivastav</div>
         <div id="nav-links">
-            <a href="#home">Home</a>
+            <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#skills">Skills</a>
             <a href="#growth">Growth</a>
@@ -887,7 +888,7 @@
         <i id="menu-toggle" class="fas fa-bars"></i>
     </nav>
 
-    <section id="home" class="parallax" style="background-image: url('https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80');">
+    <section id="home" class="parallax active" style="background-image: url('https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80');">
         <canvas id="particles"></canvas>
         <div class="content" data-aos="fade-up">
             <h1>Hi, I’m Pranjal Shrivastav</h1>
@@ -1082,19 +1083,19 @@
         <div class="testimonial-grid">
             <div class="testimonial-card" data-aos="slide-up">
                 <p>"Pranjal delivered an outstanding website that exceeded our expectations. Highly recommended!"</p>
-                <span>- Client A, CEO of Tech Startup</span>
+                <span>- Alex Johnson, CEO of TechInnovate</span>
             </div>
             <div class="testimonial-card" data-aos="slide-up" data-aos-delay="200">
                 <p>"Amazing graphic design work. Transformed our brand identity completely."</p>
-                <span>- Client B, Marketing Director</span>
+                <span>- Sarah Lee, Marketing Director at BrandBoost</span>
             </div>
             <div class="testimonial-card" data-aos="slide-up" data-aos-delay="400">
                 <p>"Professional editing services that made our videos pop. Will hire again!"</p>
-                <span>- Client C, Content Creator</span>
+                <span>- Michael Chen, Content Creator at VideoVibes</span>
             </div>
             <div class="testimonial-card" data-aos="slide-up" data-aos-delay="600">
                 <p>"Excellent cybersecurity consultation. Secured our online presence effectively."</p>
-                <span>- Client D, Business Owner</span>
+                <span>- Emily Patel, Business Owner at SecureSolutions</span>
             </div>
         </div>
     </section>
@@ -1170,12 +1171,6 @@
         </div>
         <footer>
             &copy; 2025 Pranjal Shrivastav. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
-            <div>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
         </footer>
     </section>
 
@@ -1235,7 +1230,7 @@
         // Initialize AOS
         AOS.init({ duration: 1200, once: true });
 
-        // Nav background on scroll
+        // Nav background on scroll - but since no page scroll, perhaps remove or keep for consistency
         window.addEventListener('scroll', () => {
             const nav = document.querySelector('nav');
             if (window.scrollY > 50) {
@@ -1252,36 +1247,32 @@
             navLinks.classList.toggle('open');
         });
 
-        // Smooth scroll with page transition animation
+        // Section switching like pages
+        const sections = document.querySelectorAll('section');
+        let currentSection = document.getElementById('home');
+
         document.querySelectorAll('nav a').forEach(link => {
             link.addEventListener('click', (e) => {
                 e.preventDefault();
                 const targetId = link.getAttribute('href').substring(1);
                 const targetSection = document.getElementById(targetId);
-                document.body.style.opacity = 0;
+                if (targetSection === currentSection) return;
+
+                document.querySelectorAll('nav a').forEach(l => l.classList.remove('active'));
+                link.classList.add('active');
+
+                currentSection.style.opacity = 0;
                 setTimeout(() => {
-                    window.scrollTo({
-                        top: targetSection.offsetTop - 80,
-                        behavior: 'smooth'
-                    });
-                    document.body.style.opacity = 1;
+                    currentSection.classList.remove('active');
+                    targetSection.classList.add('active');
+                    targetSection.style.opacity = 0;
+                    setTimeout(() => {
+                        targetSection.style.opacity = 1;
+                    }, 50);
+                    currentSection = targetSection;
                 }, 500);
             });
         });
-
-        // Active nav link on scroll
-        const sections = document.querySelectorAll('section');
-        const observerOptions = { threshold: 0.3 };
-        const observer = new IntersectionObserver(entries => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    document.querySelectorAll('nav a').forEach(link => link.classList.remove('active'));
-                    const id = entry.target.id;
-                    document.querySelector(`nav a[href="#${id}"]`).classList.add('active');
-                }
-            });
-        }, observerOptions);
-        sections.forEach(sec => observer.observe(sec));
 
         // Particles animation
         const canvas = document.getElementById('particles');
@@ -1289,7 +1280,7 @@
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
         let particlesArray = [];
-        for (let i = 0; i < 100; i++) {  // Increased particles
+        for (let i = 0; i < 100; i++) {
             particlesArray.push({
                 x: Math.random() * canvas.width,
                 y: Math.random() * canvas.height,
@@ -1341,21 +1332,19 @@
             updateCount();
         });
 
-        // Progress and bar animation on view
-        const animObserver = new IntersectionObserver(entries => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.querySelectorAll('.progress-fill').forEach(fill => {
+        // Progress and bar animation on section active
+        sections.forEach(sec => {
+            sec.addEventListener('transitionend', () => {
+                if (sec.classList.contains('active')) {
+                    sec.querySelectorAll('.progress-fill').forEach(fill => {
                         fill.style.width = fill.style.getPropertyValue('--progress');
                     });
-                    entry.target.querySelectorAll('.bar').forEach(bar => {
+                    sec.querySelectorAll('.bar').forEach(bar => {
                         bar.style.height = bar.style.getPropertyValue('--height');
                     });
-                    animObserver.unobserve(entry.target);
                 }
             });
-        }, { threshold: 0.1 });
-        document.querySelectorAll('#skills, #growth').forEach(sec => animObserver.observe(sec));
+        });
 
         // Modal functions
         function openModal(id) {
