--- a/index.html
+++ b/index.html
@@ -23,6 +23,31 @@
             transition: background 0.5s ease;
         }
 
+        .mobile-warning {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.8);
+            color: #fff;
+            text-align: center;
+            padding-top: 40vh;
+            font-size: 20px;
+            z-index: 1001;
+        }
+
+        @media (max-width: 768px) {
+            .mobile-warning {
+                display: block;
+            }
+
+            section, nav {
+                display: none;
+            }
+        }
+
         section {
             display: none;
             position: fixed;
@@ -261,12 +286,12 @@
             flex-direction: column;
             padding: 0;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
         }
 
         #about .hero-image {
             width: 100%;
-            height: 50vh;
+            height: 40vh;
             background: url('https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80') center/cover no-repeat;
             position: relative;
             overflow: hidden;
@@ -284,14 +309,14 @@
         }
 
         #about .text {
-            padding: 60px 40px;
+            padding: 40px;
             color: #FFFFFF;
             background: rgba(11,12,16,0.8);
             backdrop-filter: blur(10px);
-            max-width: 1200px;
+            max-width: 1000px;
             width: 100%;
             border-radius: 20px;
-            margin: -100px 0 0;
+            margin: -80px auto 40px;
             z-index: 2;
             box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
@@ -304,6 +329,7 @@
             color: #66FCF1;
             text-shadow: 0 2px 10px rgba(102,252,241,0.5);
             animation: slideInLeft 1s ease;
+            text-align: center;
         }
 
         #about p {
@@ -446,13 +472,6 @@
             text-align: center;
             padding: 20px;
             transition: transform 0.4s ease, box-shadow 0.4s ease;
-            animation: pulse 2s infinite;
-        }
-
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.05); }
-            100% { transform: scale(1); }
         }
 
         .fact-box:hover {
@@ -464,12 +483,6 @@
             font-size: 36px;
             color: #66FCF1;
             margin-bottom: 15px;
-            animation: spin 2s linear infinite;
-        }
-
-        @keyframes spin {
-            from { transform: rotate(0deg); }
-            to { transform: rotate(360deg); }
         }
 
         .fact-box span {
@@ -889,7 +902,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding-bottom: 100px; /* To avoid overlap with footer */
+            padding-bottom: 150px; /* Increased to avoid overlap */
         }
 
         #contact h2 {
@@ -1083,7 +1096,7 @@
 
             #about .text {
                 padding: 40px 20px;
-                margin: -50px 20px 0;
+                margin: -50px 20px 40px;
             }
 
             .timeline::before {
@@ -1171,6 +1184,8 @@
     </style>
 </head>
 <body>
+    <div class="mobile-warning">Please enable desktop site mode to access this website properly.</div>
+
     <nav>
         <div id="logo">Pranjal Shrivastav</div>
         <div id="nav-links">
@@ -1204,6 +1219,9 @@
             <p>Hello! I'm Pranjal Shrivastav, a versatile freelancer with a passion for technology and design. With over 5 years of experience, I've honed my skills in web development, graphic design, video editing, and cyber security to deliver high-impact solutions that drive success for my clients.</p>
             <p>My journey began with a fascination for code and creativity, leading me to win prestigious awards like 1st place in the Cyber Security Olympiad, 6th in the HTML & CSS Expertise Quiz across India, and 7th in the Delhi Graphic Designing Olympiad. These achievements have fueled my commitment to excellence and innovation.</p>
             <p>Beyond work, I'm an avid learner, exploring AI, contributing to open-source, and staying ahead of trends to provide cutting-edge services. Whether it's building responsive websites or designing compelling visuals, I thrive on turning visions into reality.</p>
+            <p>Let's collaborate to bring your ideas to life!</p>
+            <p>I specialize in creating user-centric designs that not only look great but also perform exceptionally. My approach is collaborative, ensuring that every project aligns perfectly with client goals.</p>
+            <p>With a keen eye for detail and a commitment to quality, I ensure every project is delivered on time and exceeds expectations.</p>
             <div class="achievements" data-aos="fade-up">
                 <div class="achievement">
                     <i class="fas fa-trophy"></i>
@@ -1228,7 +1246,7 @@
                 </div>
                 <div class="timeline-item">
                     <h3>2022</h3>
-                    <p>Expanded into UI/UX and graphic design, completing over 30 projects and building a strong foundation in creative technologies.</p>
+                    <p>Expanded into UI/UX and graphic design, completing over 30 projects and building a strong strong foundation in creative technologies.</p>
                 </div>
                 <div class="timeline-item">
                     <h3>2023</h3>
@@ -1487,51 +1505,6 @@
                     <button onclick="openModal('project3')">View Details</button>
                 </div>
             </div>
-            <div class="proj-card" data-aos="zoom-in-up" data-aos-delay="600">
-                <div class="front">
-                    <img src="https://images.unsplash.com/photo-1499951360447-b19be8a32766?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80" alt="Project 4">
-                    <p>Video Editing for Marketing Video</p>
-                </div>
-                <div class="back">
-                    <h3>Video Editing</h3>
-                    <p>Edited videos with effects using Premiere Pro and After Effects.</p>
-                    <div class="tech-stack">
-                        <span>Premiere Pro</span>
-                        <span>After Effects</span>
-                    </div>
-                    <button onclick="openModal('project4')">View Details</button>
-                </div>
-            </div>
-            <div class="proj-card" data-aos="zoom-in-up" data-aos-delay="800">
-                <div class="front">
-                    <img src="https://images.unsplash.com/photo-1542744173-8e7f7175bb17?ixlib=rb-4.0.3&auto=format&fit=crop&w=2069&q=80" alt="Project 5">
-                    <p>Custom CMS Development</p>
-                </div>
-                <div class="back">
-                    <h3>Custom CMS</h3>
-                    <p>Developed with WordPress and custom plugins for content management.</p>
-                    <div class="tech-stack">
-                        <span>WordPress</span>
-                        <span>PHP</span>
-                    </div>
-                    <button onclick="openModal('project5')">View Details</button>
-                </div>
-            </div>
-            <div class="proj-card" data-aos="zoom-in-up" data-aos-delay="1000">
-                <div class="front">
-                    <img src="https://images.unsplash.com/photo-1484417896044-5cabe7ebd05b?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80" alt="Project 6">
-                    <p>Logo Design and Branding</p>
-                </div>
-                <div class="back">
-                    <h3>Logo & Branding</h3>
-                    <p>Designed logos and branding kits for consistency across media.</p>
-                    <div class="tech-stack">
-                        <span>Illustrator</span>
-                        <span>Photoshop</span>
-                    </div>
-                    <button onclick="openModal('project6')">View Details</button>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -1594,43 +1567,6 @@
             </div>
         </div>
     </div>
-    <div id="project4" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('project4')">&times;</span>
-            <h2>Video Editing for Marketing Video</h2>
-            <p>Edited promotional videos with effects and transitions using Premiere Pro and After Effects. The videos achieved high engagement on social media.</p>
-            <img src="https://images.unsplash.com/photo-1499951360447-b19be8a32766?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80" alt="Project 4">
-            <div class="tech-stack">
-                <span>Premiere Pro</span>
-                <span>After Effects</span>
-            </div>
-        </div>
-    </div>
-    <div id="project5" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('project5')">&times;</span>
-            <h2>Custom CMS Development</h2>
-            <p>Developed a custom content management system with WordPress and custom plugins for easy content updates and management.</p>
-            <img src="https://images.unsplash.com/photo-1542744173-8e7f7175bb17?ixlib=rb-4.0.3&auto=format&fit=crop&w=2069&q=80" alt="Project 5">
-            <div class="tech-stack">
-                <span>WordPress</span>
-                <span>PHP</span>
-                <span>MySQL</span>
-            </div>
-        </div>
-    </div>
-    <div id="project6" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('project6')">&times;</span>
-            <h2>Logo Design and Branding</h2>
-            <p>Designed logos and complete branding kits for multiple clients, ensuring consistency across all media and platforms.</p>
-            <img src="https://images.unsplash.com/photo-1484417896044-5cabe7ebd05b?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80" alt="Project 6">
-            <div class="tech-stack">
-                <span>Illustrator</span>
-                <span>Photoshop</span>
-            </div>
-        </div>
-    </div>
 
     <!-- Theme Toggle Button -->
     <button id="theme-toggle"><i class="fas fa-moon"></i></button>
@@ -1639,7 +1575,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         // Initialize AOS
-        AOS.init({ duration: 1200, once: false, mirror: true });
+        AOS.init({ duration: 800, once: false, mirror: true });
 
         // Nav background on scroll
         window.addEventListener('scroll', () => {
@@ -1682,17 +1618,22 @@
                     isTransitioning = false;
                     // Trigger section-specific animations
                     if (targetSection.id === 'growth') {
-                        targetSection.querySelector('.bar-graph').classList.add('visible');
-                        targetSection.querySelectorAll('.bar').forEach(bar => {
-                            bar.style.height = bar.style.getPropertyValue('--height');
+                        const graph = targetSection.querySelector('.bar-graph');
+                        graph.classList.add('visible');
+                        targetSection.querySelectorAll('.bar').forEach((bar, index) => {
+                            setTimeout(() => {
+                                bar.style.height = bar.style.getPropertyValue('--height');
+                            }, index * 200);
                         });
                     } else if (targetSection.id === 'about') {
                         targetSection.querySelectorAll('.timeline-item').forEach((item, index) => {
                             setTimeout(() => item.classList.add('visible'), index * 300);
                         });
                     } else if (targetSection.id === 'skills') {
-                        targetSection.querySelectorAll('.progress-fill').forEach(fill => {
-                            fill.style.width = fill.style.getPropertyValue('--progress');
+                        targetSection.querySelectorAll('.progress-fill').forEach((fill, index) => {
+                            setTimeout(() => {
+                                fill.style.width = fill.style.getPropertyValue('--progress');
+                            }, index * 100);
                         });
                     }
                 }, 50);
@@ -1704,17 +1645,19 @@
                 e.preventDefault();
                 const targetId = link.getAttribute('href').substring(1);
                 const targetSection = document.getElementById(targetId);
-                switchSection(targetSection);
+                if (targetSection) {
+                    switchSection(targetSection);
+                }
             });
         });
 
-        // Particles animation
+        // Particles animation - reduced to 50 for performance
         const canvas = document.getElementById('particles');
         const ctx = canvas.getContext('2d');
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
         let particlesArray = [];
-        for (let i = 0; i < 150; i++) {  // Increased for more motion, but optimized
+        for (let i = 0; i < 50; i++) {
             particlesArray.push({
                 x: Math.random() * canvas.width,
                 y: Math.random() * canvas.height,
@@ -1781,9 +1724,8 @@
         };
 
         // Form submission with EmailJS
-        // Note: Replace with your EmailJS service ID, template ID, and user ID
-        // Go to emailjs.com to set up (free tier available)
-        emailjs.init("YOUR_USER_ID_HERE");  // Replace with your EmailJS user ID
+        // Replace 'YOUR_USER_ID_HERE', 'YOUR_SERVICE_ID_HERE', 'YOUR_TEMPLATE_ID_HERE' with actual values from emailjs.com
+        emailjs.init("YOUR_USER_ID_HERE");
 
         document.getElementById('contact-form').addEventListener('submit', function(e) {
             e.preventDefault();
@@ -1801,7 +1743,7 @@
                 });
         });
 
-        // Additional function: Theme toggle (dark/light mode)
+        // Theme toggle
         const themeToggle = document.getElementById('theme-toggle');
         themeToggle.addEventListener('click', () => {
             document.body.classList.toggle('dark-mode');
@@ -1812,7 +1754,7 @@
             }
         });
 
-        // Resize canvas on window resize for smoothness
+        // Resize canvas
         window.addEventListener('resize', () => {
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
